src/main/jkube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avangrid-backend
spec:
  template:
    spec:
      containers:
        - name: spring-boot
          imagePullPolicy: Always
