src/main/jkube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avangrid-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: avangrid-backend
  template:
    metadata:
      labels:
        app: avangrid-backend
    spec:
      containers:
      - name: avangrid-backend
        image: ${ACR_NAME}.azurecr.io/avangrid-backend:${project.version}
        ports:
        - containerPort: 8080
