src/main/jkube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: avangrid-backend-service
spec:
  type: ClusterIP
  selector:
    app: avangrid-backend
  ports:
    - port: 80
      targetPort: 8080
