src/main/jkube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: avangrid-backend
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: avangrid-backend
