src/main/jkube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: avangrid-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: ${INGRESS_HOST}
      http:
        paths:
          - path: /biz/avangrid-backend(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: avangrid-backend-service
                port:
                  number: 80
